--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0"
   },
-  "types": "./index.d.ts"
+  "types": "./index.d.ts",
+  "dependencies": {
+    "uuid": "^9.0.0"
+  }
 }
