--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "@byaga/journal",
   "version": "0.5.1",
   "description": "Structured logging utility",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
-    "test": "jest ."
+    "build": "tsc",
+    "test": "jest"
   },
   "keywords": [
     "logging"
@@ -12,10 +13,15 @@
   "author": "VeryFineHat",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^26.6.3",
-    "jest-junit": "^12.0.0"
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.8.10",
+    "@types/uuid": "^9.0.7",
+    "jest": "^29.7.0",
+    "jest-html-reporters": "^3.1.7",
+    "jest-junit": "^16.0.0",
+    "ts-jest": "^29.1.1"
   },
   "dependencies": {
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.1"
   }
 }
