--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.6.0",
   "description": "Structured logging utility",
   "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "jest"
