--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "test": "jest"
+    "clean": "rimraf ./lib",
+    "build": "npm run clean && tsc",
+    "lint": "eslint . --ext .ts",
+    "test": "jest",
+    "preversion": "npm run lint && npm test && npm run build",
+    "prepublishOnly": "npm run preversion"
   },
   "keywords": [
     "logging"
@@ -17,9 +21,13 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^20.8.10",
     "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "jest-html-reporters": "^3.1.7",
     "jest-junit": "^16.0.0",
+    "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1"
   },
   "dependencies": {
