--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
       "./node_modules/@types"
     ]
   },
-  "include": ["src/**/*"],
-  "exclude": [ "node_modules", "*.spec.ts" ]
+  "include": ["src/**/*.ts"],
+  "exclude": [ "node_modules", "**/*.spec.ts" ]
 }
