--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "npm run clean && tsc",
     "lint": "eslint . --ext .ts",
     "test": "jest",
-    "preversion": "npm run lint && npm test && npm run build",
-    "prepublishOnly": "npm run preversion"
+    "preversion": "npm run lint && npm test && npm run build"
   },
   "keywords": [
     "logging"
@@ -32,5 +31,9 @@
   },
   "dependencies": {
     "uuid": "^9.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/veryfine-hat/byaga-journal"
   }
 }
