--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@byaga/journal",
-  "version": "1.0.0-6",
+  "version": "1.0.0",
   "description": "Structured logging utility",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
