--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "rimraf ./lib",
     "build": "npm run clean && tsc",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint src/**/*.ts",
     "test": "jest",
     "prepare": "husky"
   },
@@ -17,18 +17,19 @@
   "author": "VeryFineHat",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.8.10",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.1",
+    "globals": "^15.13.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-html-reporters": "^3.1.7",
     "jest-junit": "^16.0.0",
     "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "typescript-eslint": "^8.17.0"
   },
   "dependencies": {
     "uuid": "^9.0.1"
